--- a/Control/templates/base.html
+++ b/Control/templates/base.html
@@ -26,7 +26,7 @@
         </button>
     </div>
 </header>
-<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+<div class="container mx-auto flex flex-row p-5 items-center justify-center text-center">
     {% block content %}
 
 
