--- a/Control/templates/sensor_add.html
+++ b/Control/templates/sensor_add.html
@@ -53,7 +53,7 @@
             </td>
             <td class="border-b-2 p-4 dark:border-dark-5">
                 <form method="post" action="/sensor/{{sensor[0]}}/delete">
-                    <button>Unsubscribe</button>
+                    <button class="text-red-500">Unsubscribe</button>
                 </form>
             </td>
         </tr>
