--- a/Control/templates/sensor_add.html
+++ b/Control/templates/sensor_add.html
@@ -43,7 +43,7 @@
         {% for sensor in sensors %}
         <tr class="text-gray-700">
             <td class="border-b-2 p-4 dark:border-dark-5">
-                <a href="/sensor/{{sensor[0]}}" class="text-green-800">{{sensor[0]}}</a>
+                <a href="/sensor/{{sensor[0]}}" class="text-blue-500 hover:text-blue-800 transition duration-300 ease-in-out">{{sensor[0]}}</a>
             </td>
             <td class="border-b-2 p-4 dark:border-dark-5">
                 {{sensor[1]}}
@@ -53,7 +53,7 @@
             </td>
             <td class="border-b-2 p-4 dark:border-dark-5">
                 <form method="post" action="/sensor/{{sensor[0]}}/delete">
-                    <button class="text-red-500">Unsubscribe</button>
+                    <button class="text-red-500 hover:text-red-800 transition duration-300 ease-in-out">Unsubscribe</button>
                 </form>
             </td>
         </tr>
