Added ability to change host and port of external service

--- a/Control/templates/upload.html
+++ b/Control/templates/upload.html
@@ -4,7 +4,9 @@
 
 <h1>File Upload</h1>
 <form method="POST">
-    <p><input type="submit" value="Submit"></p>
+    <input type="text" value="Host" name="host">
+    <input type="text" value="Port" name="port">
+    <input type="submit" value="Submit">
 </form>
 
 {% endblock %}
