--- a/Control/templates/base.html
+++ b/Control/templates/base.html
@@ -13,7 +13,7 @@
         </a>
         <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
             <a href="/sensor" class="mr-5 hover:text-gray-900">Add sensor</a>
-            <a class="mr-5 hover:text-gray-900">Second Link</a>
+            <a href="/upload" class="mr-5 hover:text-gray-900">Upload data</a>
             <a class="mr-5 hover:text-gray-900">Third Link</a>
             <a class="mr-5 hover:text-gray-900">Fourth Link</a>
         </nav>
